fixed z-index issues when using multiple sidenavs

--- a/app/assets/stylesheets/godmin/index.scss
+++ b/app/assets/stylesheets/godmin/index.scss
@@ -92,10 +92,10 @@
 
   .navigation {
     .md-sidenav-backdrop {
-      z-index: 79;
+      z-index: 80;
     }
     md-sidenav {
-      z-index: 80;
+      z-index: 81;
     }
   }
 
